REOPENED146112
~4% Membuster regression after WebKit r185452
https://bugs.webkit.org/show_bug.cgi?id=146112
Summary ~4% Membuster regression after WebKit r185452
Antti Koivisto
Reported 2015-06-18 08:34:20 PDT
Looks like delaying writes in disk cache increased memory consumption in Membuster, probably due to keeping write buffers around longer.
Attachments
patch (4.78 KB, patch)
2015-06-18 09:24 PDT, Antti Koivisto
cdumez: review+
Antti Koivisto
Comment 1 2015-06-18 09:24:45 PDT
Antti Koivisto
Comment 2 2015-06-18 09:25:13 PDT
Chris Dumez
Comment 3 2015-06-18 09:34:54 PDT
Comment on attachment 255118 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=255118&action=review r=me > Source/WebKit2/ChangeLog:8 > + Clear the cache write queue on critical memory pressure. There can be substantial amount of memory there and we I thought you were going to hurry the writes instead but why not. This is much simpler :) > Source/WebKit2/NetworkProcess/NetworkProcess.cpp:184 > + nit: Seems unnecessary to add a line here.
Antti Koivisto
Comment 4 2015-06-18 10:17:47 PDT
WebKit Commit Bot
Comment 5 2015-07-02 05:11:01 PDT
Re-opened since this is blocked by bug 146544
Note You need to log in before you can comment on or make changes to this bug.