Source/WebKit2/NetworkProcess/NetworkProcess.cpp
@@ -176,6 +176,10 @@ AuthenticationManager& NetworkProcess::downloadsAuthenticationManager()
 void NetworkProcess::lowMemoryHandler(Critical critical)
 {
     platformLowMemoryHandler(critical);
+#if ENABLE(NETWORK_CACHE)
+    if (NetworkCache::singleton().isEnabled())
+        NetworkCache::singleton().handleMemoryPressureNotification(critical);
+#endif
     WTF::releaseFastMallocFreeMemory();
 }
 
