Source/WebKit2/NetworkProcess/cache/NetworkCache.h
@@ -31,6 +31,7 @@
 #include "NetworkCacheEntry.h"
 #include "NetworkCacheStorage.h"
 #include "ShareableResource.h"
+#include <WebCore/MemoryPressureHandler.h>
 #include <WebCore/ResourceResponse.h>
 #include <wtf/text/WTFString.h>
 
@@ -102,6 +103,8 @@ public:
 
     void clear();
     void clear(std::chrono::system_clock::time_point modifiedSince, std::function<void ()>&& completionHandler);
+
+    void handleMemoryPressureNotification(WebCore::Critical);
 
     void dumpContentsToFile();
 
